--- a/bocha.html
+++ b/bocha.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-2">
+  <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
@@ -56,14 +56,39 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Project Three</h1>
+          <h1 class="project-title">Bo-Cha Boba Tea</h1>
+
           <p class="project-description">
-            A brief description of your project goes here.
+            Squishy busses, packed elevators, crowded hallways. Working life is
+            all about being close to others (even when you dont wan't to be).
+            Bo-Cha Boba Tea embodies this philosiphy, and brings it to you with
+            a bright fun twist. Embrace the squish with delightfully chewy
+            tapioca pearls in energizing tea.
+          </p>
+          <p class="project-description">
+            As someone who grew up drinking boba/bubble tea as a treat to keep
+            me going during the grind, I wanted to bring a refreshing take on
+            the growing canned boba market. I sought to blend the aesthetics of
+            Asian drink packaging with Western style inspired by risograph
+            printing.
+          </p>
+          <p class="project-description">
+            The advertising campaign for this product follows the mantra
+            "embrace the squish" and shows how it comes up in the working
+            person's day to day. Utilizing advertisements on places that
+            naturally attract many busybodies and a cheeky message to charm
+            viewers.
+          </p>
+          <p class="project-description">
+            The three flavours and illustrations represent various moods people
+            may find in their busy day. The squished bursting energy in
+            original, monotonous buzz in coffee, and need for relaxation with
+            green tea.
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="chinese-national-bag.html" class="navigation-arrow"
+            <a href="liminal.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
@@ -77,11 +102,44 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
-            width="1000"
-            height="1000"
+            src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-mockup.jpg"
+            width="900"
             alt="A description of the image"
           />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
+            width="700"
+            alt=""
+          />
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-elevator-advertisement-campaign.jpg"
+              width="700"
+              alt=""
+            />
+          </figure>
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-transit-bus-wrap-advertisement-campaign.jpg"
+              width="800"
+              alt=""
+            />
+          </figure>
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-line.jpg"
+              width="600"
+              alt="A description of the image"
+            />
+          </figure>
         </div>
       </main>
     </div>
@@ -116,13 +174,13 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item">
-            <a href="project-1.html">Chinese national bag design</a>
+            <a href="d3adme4t.html">D3ADME4T Music Festival</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html">Queue branding and packaging</a>
+            <a href="liminal.html">Liminal Magazine</a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html">Bo-cha beverage branding and packaging</a>
+            <a href="foundry-refresh.html">Foundry Brand Refresh</a>
           </li>
         </ul>
       </li>
@@ -147,7 +205,7 @@
       </li>
       <li class="footer-item-4">
         <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by Caroline Zhang.
+          &copy; 2024-2026. Coded frantically by yours truly.
         </p>
       </li>
     </ul>
