--- a/home.html
+++ b/home.html
@@ -148,6 +148,34 @@
               </div>
             </a>
           </li>
+          <li class="work-page-grid-item">
+            <figure>
+              <img
+                src="assets/images/caroline-zhang-resolve-social-enterprise-storefront-logo-sign.jpg"
+                alt=""
+              />
+            </figure>
+            <a href="resolve.html">
+              <div class="overlay">
+                <h1 class="overlay-title">Resolve</h1>
+                <h4 class="overlay-description">Branding</h4>
+              </div>
+            </a>
+          </li>
+          <li class="work-page-grid-item">
+            <figure>
+              <img
+                src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-elevator-advertisement-campaign.jpg"
+                alt=""
+              />
+            </figure>
+            <a href="bocha.html">
+              <div class="overlay">
+                <h1 class="overlay-title">Bo-Cha Boba Tea</h1>
+                <h4 class="overlay-description">Branding/Packaging</h4>
+              </div>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
