--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -58,7 +58,8 @@
         <div class="project-info">
           <h1 class="project-title">D3ADME4T MUSIC FESTIVAL</h1>
           <p class="project-description">
-            WE ARE ALL D3ADME4T WE ARE ALL D3ADME4T WE ARE ALL D3ADME4T
+            WE ARE ALL D3ADME4T <br />WE ARE ALL D3ADME4T <br />WE ARE ALL
+            D3ADME4T<br />WE ARE ALL D3ADME4T<br />
           </p>
           <p class="project-description">
             Deviants and freaks of all kinds, welcome to the D3ADME4T digital
@@ -110,43 +111,59 @@
             alt="Series of 3 posters for the D3ADME4T music festival."
           />
         </div>
-        <div style="padding: 56.25% 0 0 0; position: relative">
-          <iframe
-            src="https://player.vimeo.com/video/1070558324?h=504f914e7f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-            frameborder="0"
-            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
-            style="
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-            "
-            title="Sequence 01_1_1"
-          ></iframe>
+        <div class="project-image">
+          <figure>
+            <img src="assets/images/D3ADME4T.png" width="900" alt="" />
+            <figcaption class="caption">D3ADME4T mascot design.</figcaption>
+          </figure>
         </div>
-        <script src="https://player.vimeo.com/api/player.js"></script>
-        <div style="padding: 56.25% 0 0 0; position: relative">
-          <iframe
-            src="https://player.vimeo.com/video/1070558340?h=55af81d262&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-            frameborder="0"
-            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
-            style="
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-            "
-            title="Sequence 01_1"
-          ></iframe>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-d3adme4t-social.gif"
+              width="600"
+              height="1050"
+              alt=""
+            />
+            <figcaption class="caption">
+              Customizable poster for internet-dwellers to fill out with their
+              likeness.
+            </figcaption>
+          </figure>
         </div>
-        <script src="https://player.vimeo.com/api/player.js"></script>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-d3adme4t-music-festival-spotify-takeover.jpg"
+              width="800"
+              height="1050"
+              alt=""
+            />
+            <figcaption class="caption">
+              Spotify takeover showcasing the headlining artist and linking to
+              the festival playlist.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-d3adme4t-music-festival-spotify-takeover-mobile.jpg"
+              width="800"
+              height="1050"
+              alt=""
+            />
+            <figcaption class="caption">
+              Mobile version with canvas and suggested playlist for users who
+              listen to similar artists.
+            </figcaption>
+          </figure>
+        </div>
         <div class="project-image">
           <figure>
             <img
               src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.gif"
-              width="500"
+              width="600"
               height="1050"
               alt="poster for the D3ADME4T music festival."
             />
