--- a/d3adme4t vimeo OLD.html
+++ b/d3adme4t vimeo OLD.html
@@ -3,33 +3,28 @@
   <head>
     <title>Caroline Zhang // Design Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
-
     <meta
       name="description"
       content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="screenshot.jpg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
-    <script
-      src="https://kit.fontawesome.com/d300c2ea15.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="work-page">
-    <section class="hero gradient-animation">
-      <header class="hero-header">
-        <ul class="branding-home-navigation">
-          <li class="nav">
-            <a href="about.html" class="custom-navigation">About</a>
-          </li>
-          <li class="logo-home">
+  <body class="project-2">
+    <header class="hero-header">
+      <ul class="branding-navigation">
+        <li class="logo">
+          <a href="home.html">
             <svg
               class="wordmark"
               xmlns="http://www.w3.org/2000/svg"
@@ -54,118 +49,114 @@
                 </g>
               </g>
             </svg>
+          </a>
+        </li>
+      </ul>
+    </header>
+    <div class="project-wrapper">
+      <aside class="project-aside">
+        <div class="project-info">
+          <h1 class="project-title">D3ADME4T MUSIC FESTIVAL</h1>
+          <p class="project-description">
+            WE ARE ALL D3ADME4T WE ARE ALL D3ADME4T WE ARE ALL D3ADME4T
+          </p>
+          <p class="project-description">
+            Deviants and freaks of all kinds, welcome to the D3ADME4T digital
+            hardcore music festival!! For those not in the know, modern digital
+            hardcore is the culmination of several internet aged music
+            microgenres. Some of which are internetcore/webcore, hyperpop,
+            glitchcore, breakcore, and more. Don't be scared, our beloved
+            mascot, also named D3ADME4T, will guide you through all of this
+            noise.
+          </p>
+          <p class="project-description">
+            The D3ADME4T music festival lives both online and in-person. The
+            illustrated series of 3 print ads line the streets alongside a
+            digital takeover activation in collaboration with Spotify.
+          </p>
+          <p class="project-description">
+            A separate social media campaign has been developed to bring
+            additional attention to the festival and, more importantly, to
+            connect and facilitate the online community who enjoys digital
+            hardcore music. The "_ is D3ADME4T" campaign provides resources and
+            inspiration to encourage audiences to express themselves both
+            creatively and emotionally. The facetious copy points out the
+            illogical aggravators in the modern landscape, as well as attacks
+            against individuals' beings.
+          </p>
+          <p class="project-description">
+            Please enjoy, and remember-WE ARE ALL D3ADME4T
+          </p>
+        </div>
+        <ul class="project-navigation">
+          <li class="arrow">
+            <a href="queue.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-left fa-2x"></i
+            ></a>
           </li>
-
-          <li class="nav">
-            <a href="mailto:yuqizhang@my.capilanou.ca" class="custom-navigation"
-              >hit me up!</a
-            >
-          </li>
-        </ul>
-      </header>
-      <div class="hero-headline-wrapper">
-        <h1 class="stroke-shadow">
-          Hi there. I'm Caroline Zhang, a branding design student.
-        </h1>
-      </div>
-      <footer class="hero-footer">
-        <ul class="hero-footer-navigation"></ul>
-      </footer>
-    </section>
-
-    <main class="work-wrapper">
-      <section class="portfolio">
-        <ul class="grid">
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-foundry-rebrand-poster-design-mockup.jpg"
-                alt="Bus shelter ad for mental health and social resource Foundry BC."
-              />
-            </figure>
-            <a href="foundry-refresh.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Foundry Refresh</h1>
-                <h4 class="overlay-description">Brand Strategy</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-liminal-magazine-design.jpg"
-                alt="Liminal branded magazine cover and page set in a cafe."
-              />
-            </figure>
-            <a href="liminal.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Liminal Magazine</h1>
-                <h4 class="overlay-description">Branding/Photography</h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg"
-                alt="Bag design featuring references to Chinese seal stamps built to represent the nation."
-              />
-            </figure>
-            <a href="chinese-national-bag.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Chinese National Bag</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-music-festival-branding-illustration-poster.jpg"
-                alt="Bus shelter ad for the D3ADME4T music festival. The dog girl mascot is pulling her mouth open and showing her grimace."
-              />
-            </figure>
-            <a href="d3adme4t.html">
-              <div class="overlay">
-                <h1 class="overlay-title">D3ADME4T Music Festival</h1>
-                <h4 class="overlay-description">Illustration/Branding</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-resolve-social-enterprise-storefront-logo-sign.jpg"
-                alt=""
-              />
-            </figure>
-            <a href="resolve.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Resolve</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/bo-cha/caroline-zhang-bubble-tea-drink-can-design-elevator-advertisement-campaign.jpg"
-                alt=""
-              />
-            </figure>
-            <a href="bocha.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Bo-Cha Boba Tea</h1>
-                <h4 class="overlay-description">Branding/Packaging</h4>
-              </div>
-            </a>
+          <li class="arrow">
+            <a href="foundry-refresh.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-right fa-2x"></i
+            ></a>
           </li>
         </ul>
-      </section>
-    </main>
-
+      </aside>
+      <main class="project-details">
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-d3adme4t-illustrated-poster-series.jpg"
+            width="1500"
+            height="1000"
+            alt="Series of 3 posters for the D3ADME4T music festival."
+          />
+        </div>
+        <div style="padding: 56.25% 0 0 0; position: relative">
+          <iframe
+            src="https://player.vimeo.com/video/1070558324?h=504f914e7f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
+            style="
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            "
+            title="Sequence 01_1_1"
+          ></iframe>
+        </div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
+        <div style="padding: 56.25% 0 0 0; position: relative">
+          <iframe
+            src="https://player.vimeo.com/video/1070558340?h=55af81d262&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
+            style="
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            "
+            title="Sequence 01_1"
+          ></iframe>
+        </div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
+        <div class="project-image">
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.gif"
+              width="500"
+              height="1050"
+              alt="poster for the D3ADME4T music festival."
+            />
+            <figcaption class="caption">
+              Please note, pixelization is intentional!
+            </figcaption>
+          </figure>
+        </div>
+      </main>
+    </div>
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
@@ -237,14 +228,7 @@
       <a href="#">Back to top</a>
     </div>
 
-    <div class="flier">
-      <img
-        src="assets/branding-images/mew-floater-maybe.png"
-        alt="Describe your image"
-      />
-    </div>
-
-    <script>
+    <script type="text/javascript">
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
