fixed navigation arrows

--- a/bocha.html
+++ b/bocha.html
@@ -88,12 +88,12 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="liminal.html" class="navigation-arrow"
+            <a href="resolve.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="queue.html" class="navigation-arrow"
+            <a href="foundry-refresh.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
