--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -95,7 +95,7 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="d3adme4t.html" class="navigation-arrow"
+            <a href="bocha.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
