--- a/resolve.html
+++ b/resolve.html
@@ -96,12 +96,12 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="liminal.html" class="navigation-arrow"
+            <a href="d3adme4t.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="queue.html" class="navigation-arrow"
+            <a href="bocha.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
