video game image

--- a/about.html
+++ b/about.html
@@ -90,8 +90,12 @@
       <li class="about-item-3">
         <h3>What's wigggle playing right now?</h3>
         <p>
-          SILKSONG!!!!! (2025) <em>Last updated: September 2025</em>
-          <img src="assets/images/SILKSONG.jpg" width="150" />
+          SILKSONG!!!!! (2025) <em>Last updated: September 2025</em><br />
+          <img
+            class="video-game-image"
+            src="assets/images/SILKSONG.jpg"
+            width="150"
+          />
         </p>
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
