--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@
           <a
             style="text-decoration: underline"
             class="error-navigation"
-            href="home.html"
+            href="index.html"
             >home</a
           >
         </h2>
