--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 <body class="project-2">
     <header class="hero-header">
         <ul class="branding-navigation">
-            <li><a href="home.html" class="custom-navigation">Work</a></li>
+            <li><a href="index.html" class="custom-navigation">Work</a></li>
             <li class="logo"><a href="index.html"><img src="assets/branding-images/logo.svg" /></a></li>
             <li><a href="about.html" class="custom-navigation">About</a></li>
         </ul>
@@ -86,7 +86,7 @@
             <h2>Selected Works</h2>
             <ul class="footer-nav-list">
                 <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-                <li class="footer-nav-item"><a href="home.html">Work Page</a></li>
+                <li class="footer-nav-item"><a href="index.html">Work Page</a></li>
                 <li class="footer-nav-item"><a href="work-clean.html">Work Page (Clean Version)</a></li>
                 <li class="footer-nav-item"><a href="work-clean-flier.html">Work Page (Clean Version with Flier)</a>
                 </li>
