--- a/work-clean.html
+++ b/work-clean.html
@@ -26,7 +26,7 @@
     <section class="hero">
       <header class="hero-header">
         <ul class="branding-navigation">
-          <li><a href="home.html" class="custom-navigation">Work</a></li>
+          <li><a href="index.html" class="custom-navigation">Work</a></li>
           <li class="logo">
             <a href="index.html"
               ><img
@@ -198,7 +198,7 @@
         <h2>Selected Works</h2>
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
-          <li class="footer-nav-item"><a href="home.html">Work Page</a></li>
+          <li class="footer-nav-item"><a href="index.html">Work Page</a></li>
           <li class="footer-nav-item">
             <a href="work-clean.html">Work Page (Clean Version)</a>
           </li>
