changed third to fourth year

--- a/resolve.html
+++ b/resolve.html
@@ -152,9 +152,10 @@
         <h2>About Caroline</h2>
         <p class="about-desc">
           Hi there, I’m Caroline, a graphic designer based in Vancouver. Right
-          now I’m a third year student at the IDEA School of Design with a focus
-          on brand design and a smattering of illustration and UX. I really like
-          all aspects of design, but my favourite is problem solving.
+          now I’m a fourth year student at the IDEA School of Design with a
+          focus on brand design and a smattering of illustration and UX. I
+          really like all aspects of design, but my favourite is problem
+          solving.
         </p>
         <p class="about-desc">
           There’s a lot of things I’m interested in, but my one true love is
