--- a/resolve.html
+++ b/resolve.html
@@ -58,7 +58,7 @@
         <div class="project-info">
           <h1 class="project-title">Resolve Social Enterprise</h1>
           <p class="project-description">
-            Made with contributions from
+            Made with illustration work from
             <a href="https://www.linkedin.com/in/andrew-ukko-poystila-42b723229"
               >Andy Poystila</a
             >
