updated copy for all projects

--- a/bocha.html
+++ b/bocha.html
@@ -59,18 +59,13 @@
           <h1 class="project-title">Bo-Cha Boba Tea</h1>
 
           <p class="project-description">
-            Squishy busses, packed elevators, crowded hallways. Working life is
-            all about being close to others (even when you dont wan't to be).
-            Bo-Cha Boba Tea embodies this philosiphy, and brings it to you with
-            a bright fun twist. Embrace the squish with delightfully chewy
-            tapioca pearls in energizing tea.
-          </p>
-          <p class="project-description">
-            As someone who grew up drinking boba/bubble tea as a treat to keep
-            me going during the grind, I wanted to bring a refreshing take on
-            the growing canned boba market. I sought to blend the aesthetics of
-            Asian drink packaging with Western style inspired by risograph
-            printing.
+            Jammed buses, packed elevators, crowded hallways. Working life is
+            all about being close to others (even when you don't want to be).
+            Bo-Cha Boba Tea embodies this philosophy, and brings it to you with
+            a bright fun twist. As a lifelong boba/bubble tea drinker, I paid
+            homage to the cutesy colourful nature of Asian drink packaging. The
+            use of gradients alongside the bold overlapping colours inspired by
+            risograph printing created a blend with the Western aesthetic.
           </p>
           <p class="project-description">
             The advertising campaign for this product follows the mantra
@@ -81,9 +76,8 @@
           </p>
           <p class="project-description">
             The three flavours and illustrations represent various moods people
-            may find in their busy day. The squished bursting energy in
-            original, monotonous buzz in coffee, and need for relaxation with
-            green tea.
+            experience daily. The bursting energy in original, monotonous buzz
+            in coffee, and need for relaxation with green tea.
           </p>
         </div>
         <ul class="project-navigation">
