--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -62,13 +62,10 @@
             D3ADME4T<br />WE ARE ALL D3ADME4T<br />
           </p>
           <p class="project-description">
-            Deviants and freaks of all kinds, welcome to the D3ADME4T digital
-            hardcore music festival!! For those not in the know, modern digital
-            hardcore is the culmination of several internet aged music
-            microgenres. Some of which are internetcore/webcore, hyperpop,
-            glitchcore, breakcore, and more. Don't be scared, our beloved
-            mascot, also named D3ADME4T, will guide you through all of this
-            noise.
+            The digital hardcore music fest for deviants and freaks of all
+            kinds. For those not in the know, modern digital hardcore is the
+            culmination of several internet aged music microgenres like
+            internetcore and hyperpop.
           </p>
           <p class="project-description">
             The D3ADME4T music festival lives both online and in-person. The
@@ -84,9 +81,6 @@
             creatively and emotionally. The facetious copy points out the
             illogical aggravators in the modern landscape, as well as attacks
             against individuals' beings.
-          </p>
-          <p class="project-description">
-            Please enjoy, and remember-WE ARE ALL D3ADME4T
           </p>
         </div>
         <ul class="project-navigation">
