--- a/liminal.html
+++ b/liminal.html
@@ -64,19 +64,14 @@
             being in the liminal.
           </p>
           <p class="project-description">
-            The Liminal magazine consists only of photos and illustrations from
-            my Nintendo 3DS. I was inspired by the melancholy I feel as the end
-            of our time together as IDEA 26 approaches and the joy I felt taking
-            photos of my lovely classmates in those happy moments. The archaic
-            3DS photos have the captivating ability to feel familiar and
-            nostalgic to anyone viewing them.
+            This magazine features photographs from my Nintendo 3DS game system
+            camera. I chose this medium because photos have the captivating
+            ability to feel familiar and nostalgic to anyone viewing them. The
+            analog fuzziness reflects the melancholic and introspective quality
+            of transitional periods.
           </p>
           <p class="project-description">
-            Please enjoy reading through the magazine, and taking a peek into
-            the lives of me and my classmates here at IDEA.
-          </p>
-          <p class="project-description">
-            Thank you to my contributors: <br />
+            Thank you to my lovely models: <br />
             <a href="https://www.linkedin.com/in/chiangalexis/"
               >alexis chiang,</a
             >
@@ -84,34 +79,29 @@
               >charlie wonpisethkul,
             </a>
             <a href="https://www.linkedin.com/in/neeka-yazdani-8128aa303/"
-              >neeka yazdani, </a
-            >
+              >neeka yazdani,
+            </a>
             <a href="https://www.linkedin.com/in/sophia-pan-9811b92aa/"
-              >sophia pan, </a
-            >
-            <a href="https://www.linkedin.com/in/andychau4/"
-              >andy chau, </a
-            >
+              >sophia pan,
+            </a>
+            <a href="https://www.linkedin.com/in/andychau4/">andy chau, </a>
             <a href="https://www.linkedin.com/in/jessica-baik-0b7802319/"
-              >jessica baik, </a
-            >
-            <a href=https://www.linkedin.com/in/tricia-tang-7273a8217/"
-              >tricia tang, </a
-            >
+              >jessica baik,
+            </a>
+            <a href="https://www.linkedin.com/in/tricia-tang-7273a8217/"
+              >tricia tang,
+            </a>
             <a href="https://www.linkedin.com/in/jordan-vanbergen/"
-              >jordan van bergen, </a
-            >
+              >jordan van bergen,
+            </a>
             <a href="https://www.linkedin.com/in/siobhan-barry/"
-              >siobhan barry, </a
-            >
+              >siobhan barry,
+            </a>
             <a href="https://www.linkedin.com/in/andrew-poystila-42b723229/"
-              >andy poystila, </a
-            >
-          
-            <a href="https://www.linkedin.com/in/jkambashi/"
-              >jerry kambashi</a
-            >
-            
+              >andy poystila,
+            </a>
+
+            <a href="https://www.linkedin.com/in/jkambashi/">jerry kambashi</a>
           </p>
         </div>
         <ul class="project-navigation">
@@ -223,9 +213,10 @@
         <h2>About Me</h2>
         <p class="about-desc">
           Hi there, I’m Caroline, a graphic designer based in Vancouver. Right
-          now I’m a fourth year student at the IDEA School of Design with a focus
-          on brand design and a smattering of illustration and UX. I really like
-          all aspects of design, but my favourite is problem solving.
+          now I’m a fourth year student at the IDEA School of Design with a
+          focus on brand design and a smattering of illustration and UX. I
+          really like all aspects of design, but my favourite is problem
+          solving.
         </p>
 
         <p>
