--- a/resolve.html
+++ b/resolve.html
@@ -63,22 +63,21 @@
               >Andy Poystila</a
             >
           </p>
+
           <p class="project-description">
             Resolve empowers formerly incarcerated women through art expression
             and employment opportunities facilitated by a café-gallery. The name
             stems from the term often used to describe the incarceration
             system&#8212;a revolving door. Our commitment to changing the lives
-            of those negatively effected by the justice system is represented by
+            of those negatively affected by the justice system is represented by
             the v in revolving changing to the s in resolve, celebrating the
             strength that comes up in that time.
           </p>
           <p class="project-description">
-            The branding work sets as a supporting frame for the artwork,
-            created and sourced by Andy Poystila for this project. I developed a
-            full system which covers the many various merchandise that the
-            enterprise could sell. Each piece focuses on highlighting the nature
-            and humanity behind the product, making sure to credit the artist
-            and include any information they wish for.
+            I developed the Resolve brand system which is highlighted by the
+            illustrations created and sourced by Andy Poystila. I then designed
+            a collection of fundraising merchandise that highlights feelings of
+            humanity and nature.
           </p>
 
           <p class="project-description">
