--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -67,19 +67,13 @@
           <p class="project-description">
             For this project I wanted to challenge the stereotype that "Made in
             China" means cheap production and poor quality. The use of seal
-            stamps and texture harken to the rich trade and art culture found
-            throughout Chinese history.
-          </p>
-          <p class="project-description">
-            Originally seal stamps were a method for powerful people to sign off
-            on documents. As this practice became more prevalant, art collectors
-            would stamp pieces they procure. The number of stamps on a piece
-            thus became a symbol of its value and artistic merit.
+            stamps and texture are inspired by the rich trade and art culture
+            found throughout Chinese history.
           </p>
           <p class="project-description">
             The characters making up the stamps represent the Chinese dynasties.
-            Each dynasty came with it's own set of innovations in both the art
-            and technology. By combining the dynasty names with seal stamps, I
+            Each dynasty came with its own set of innovations in both art and
+            technology. By combining the dynasty names with seal stamps, I
             wanted to redefine "Made in China" to represent the history,
             innovation, and artistic merit of the nation.
           </p>
