--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -66,24 +66,22 @@
           </p>
           <p class="project-description">
             A full service brand strategy, refresh, and activation for
-            provincial mental health and social support service Foundry BC. I
-            created this brief due to my local Foundry centre reducing services
-            due to lack of funds, and an overall lack of engagement with the
-            brand. This project included an audit of the brand, website, and
-            social media profiles, as well as a new campaign rollout.
+            provincial mental health and social support service Foundry BC. This
+            project includes a brand audit, website, and social media profiles,
+            as well as a new campaign rollout.
           </p>
           <p class="project-description">
-            When developing the campaign, I took into consideration the current
-            brand assets and how their content production likely works on a low
-            budget. The campaign should be able to be iterated on over and over
-            for the long term. The existing animal spot illustrations have been
-            repurposed in the “Foundry’s Here” campaign to highlight how mental
-            health challenges are a natural process that Foundry can help with.
-            Foundry’s here itself represents many aspects of the brand: the
-            locality, community, and support when you want it. Additionally, the
-            circular shapes found in other parts of the brand are utilized as
-            the main graphic shape which creates a more interesting composition
-            with the static spot illustrations.
+            When developing the campaign, I took into consideration the existing
+            brand assets and how their content production works on a low budget.
+            The campaign should be evergreen and reiteratable over and over
+            again. The existing animal spot illustrations have been repurposed
+            in the “Foundry’s Here” campaign to highlight how mental health
+            challenges are a natural process that Foundry can help with. It
+            represents many aspects of the brand: the locality, community, and
+            support when you want it. Additionally, the circular shapes found in
+            other parts of the brand are utilized as the main graphic shape
+            which creates a more interesting composition with the static spot
+            illustrations.
           </p>
           <p class="project-description">
             Interested in seeing more?<br />
