--- a/about.html
+++ b/about.html
@@ -91,10 +91,10 @@
       <li class="about-item-3">
         <h3>What's wigggle playing right now?</h3>
         <p>
-          SILKSONG!!!!! (2025) <em>Last updated: September 2025</em><br />
+          Hades II (2025) <em>Last updated: October 2025</em><br />
           <img
             class="video-game-image"
-            src="assets/images/SILKSONG.jpg"
+            src="assets/images/hades 2.png"
             width="150"
           />
         </p>
