test changed name

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
         <p>"One of the greatest minds I know."</p>
       </li>
       <li class="about-item-3">
-        <h3>What's wigggle playing right now?</h3>
+        <h3>What's caroline playing right now?</h3>
         <p>
           Hades II (2025) <em>Last updated: October 2025</em><br />
           <img
