video game change

--- a/about.html
+++ b/about.html
@@ -91,12 +91,9 @@
       <li class="about-item-3">
         <h3>What's wigggle playing right now?</h3>
         <p>
-          Hades II (2025) <em>Last updated: October 2025</em><br />
-          <img
-            class="video-game-image"
-            src="assets/images/hades 2.png"
-            width="150"
-          />
+          Plants Vs. Zombies 2 Reflourished (2025)
+          <em>Last updated: November 2025</em><br />
+          <img class="video-game-image" src="assets/images/hypsb2zu79x91.jpg" />
         </p>
         <h2>Contact &amp; Social</h2>
         <ul class="socials-list">
