--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -53,11 +53,31 @@
         </li>
       </ul>
     </header>
+    <div>
+      <ul class="project-navigation">
+        <li class="arrow">
+          <a href="index redesign WIP.html" class="navigation-arrow"
+            ><i class="fas fa-arrow-left fa-2x"></i
+          ></a>
+        </li>
+        <li>
+          <h1 class="project-title">D3ADME4T MUSIC FESTIVAL</h1>
+        </li>
+      </ul>
+    </div>
+
+    <div class="project-image-wide">
+      <img
+        src="assets/images/caroline-zhang-d3adme4t-illustrated-poster-series.jpg"
+        alt="Series of 3 posters for the D3ADME4T music festival."
+        width="1800"
+      />
+    </div>
+
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">D3ADME4T MUSIC FESTIVAL</h1>
-
+          <h6>Branding / Illustration / Campaign</h6>
           <p class="project-description">
             The digital hardcore music fest for deviants and freaks of all
             kinds. For those not in the know, modern digital hardcore is the
@@ -80,55 +100,14 @@
             against individuals' beings.
           </p>
         </div>
-        <ul class="project-navigation">
-          <li class="arrow">
-            <a href="chinese-national-bag.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-left fa-2x"></i
-            ></a>
-          </li>
-          <li class="arrow">
-            <a href="resolve.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-right fa-2x"></i
-            ></a>
-          </li>
-        </ul>
       </aside>
       <main class="project-details">
-        <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-d3adme4t-illustrated-poster-series.jpg"
-            width="1500"
-            height="1000"
-            alt="Series of 3 posters for the D3ADME4T music festival."
-          />
-        </div>
-        <div class="project-image">
-          <figure>
-            <img src="assets/images/D3ADME4T.png" width="900" alt="" />
-            <figcaption class="caption">D3ADME4T mascot design.</figcaption>
-          </figure>
-        </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/caroline-zhang-d3adme4t-social.gif"
-              width="600"
-              height="1050"
-              alt=""
-            />
-            <figcaption class="caption">
-              Customizable poster for internet-dwellers to fill out with their
-              likeness.
-            </figcaption>
-          </figure>
-        </div>
         <div class="project-image">
           <figure>
             <img
               src="assets/images/caroline-zhang-d3adme4t-music-festival-spotify-takeover.jpg"
-              width="800"
-              height="1050"
               alt=""
+              width="1200"
             />
             <figcaption class="caption">
               Spotify takeover showcasing the headlining artist and linking to
@@ -136,34 +115,45 @@
             </figcaption>
           </figure>
         </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/caroline-zhang-d3adme4t-music-festival-spotify-takeover-mobile.jpg"
-              width="800"
-              height="1050"
-              alt=""
-            />
-            <figcaption class="caption">
-              Mobile version with canvas and suggested playlist for users who
-              listen to similar artists.
-            </figcaption>
-          </figure>
-        </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.gif"
-              width="600"
-              height="1050"
-              alt="poster for the D3ADME4T music festival."
-            />
-            <figcaption class="caption">
-              Please note, pixelization is intentional!
-            </figcaption>
-          </figure>
-        </div>
       </main>
+    </div>
+    <div class="project-image-wide">
+      <figure>
+        <img
+          src="assets/images/caroline-zhang-d3adme4t-music-festival-spotify-takeover-mobile.jpg"
+          alt=""
+          width="1800"
+        />
+        <figcaption class="caption">
+          Mobile version with canvas and suggested playlist for users who listen
+          to similar artists.
+        </figcaption>
+      </figure>
+    </div>
+    <div class="project-image-mult">
+      <div class="project-image">
+        <figure>
+          <img
+            src="assets/images/caroline-zhang-d3adme4t-social.gif"
+            alt=""
+            width="600"
+          />
+          <figcaption class="caption">
+            Customizable poster for internet-dwellers to fill out with their
+            likeness.
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="project-image">
+        <figure>
+          <img
+            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.gif"
+            alt="posters for the D3ADME4T music festival."
+            width="600"
+          />
+        </figure>
+      </div>
     </div>
     <ul class="global-footer">
       <li class="footer-item-1">
@@ -232,10 +222,6 @@
         </p>
       </li>
     </ul>
-
-    <div id="myID" class="bottomMenu hide">
-      <a href="#">Back to top</a>
-    </div>
 
     <script type="text/javascript">
       myID = document.getElementById("myID");
