new section in home

--- a/index.html
+++ b/index.html
@@ -71,10 +71,17 @@
       <div class="illustration-overlay"></div>
 
       <div class="hero-headline-wrapper">
-        <h1 class="stroke-shadow">Caroline Zhang, Designer.</h1>
+        <h1 class="stroke-shadow">Caroline Zhang, Designer</h1>
       </div>
     </section>
-
+    <section class="home-blurb-container">
+      <div class="home-blurb">
+        <h5>
+          I’m a Vancouver based designer with a focus on research and problem
+          solving. I like dogs, video games, and music.
+        </h5>
+      </div>
+    </section>
     <main class="work-wrapper">
       <section class="portfolio">
         <ul class="grid">
