--- a/about.html
+++ b/about.html
@@ -67,23 +67,25 @@
       <li class="about-item-2">
         <h2>About Caroline</h2>
         <p class="about-desc">
-          Hi there, I’m Caroline, a graphic designer based in Vancouver. Right
-          now I’m a fourth year student at the IDEA School of Design with a
-          focus on brand design and a smattering of illustration and UX. I
-          really like all aspects of design, but my favourite is problem
-          solving.
+          Hi there, I’m Caroline, a graphic designer based in Vancouver. I’m a
+          fresh new graduate from the IDEA School of Design with a focus on
+          brand design and a smattering of illustration and UX. I have found
+          design to be a melding of problem solving skills with the arts, which
+          are two of my favourite things in life.
         </p>
         <p class="about-desc">
           There’s a lot of things I’m interested in, but my one true love is
-          video games (you’ll find me as wigggle). It inspires me both
-          artistically and analytically in my day to day. I’ve also been
-          consistently working part time in the service industry since I was 14,
-          so I am all too familiar with solving problems on the fly and working
-          efficiently.
+          video games (you’ll find me online as wigggle). It inspires me
+          artistically and analytically while getting me to work in
+          collaboration with others. I’ve also been consistently working part
+          time in the service industry since I was 14. I am maybe too familiar
+          with solving problems on the fly, interacting with clients, and
+          working efficiently.
         </p>
         <p>
           I spend every waking moment next to computers. Feel free to reach out
-          and I’ll get back to you as soon as I can (after one more game).
+          to talk all things design, hobbies, or the general state of the world.
+          I’ll get back to you as soon as I can.
         </p>
         <h3>Testimonials</h3>
         <p>"One of the greatest minds I know."</p>
