new temp class for the new format

--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="project-wrapper">
-      <aside class="project-aside">
+      <aside class="project-aside-temp">
         <div class="project-info">
           <h6>Branding / Illustration / Campaign</h6>
           <p class="project-description">
