--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -56,7 +56,7 @@
     <div>
       <ul class="project-navigation">
         <li class="arrow">
-          <a href="index redesign WIP.html" class="navigation-arrow"
+          <a href="index.html" class="navigation-arrow"
             ><i class="fas fa-arrow-left fa-2x"></i
           ></a>
         </li>
