--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
@@ -53,17 +53,31 @@
         </li>
       </ul>
     </header>
+    <div>
+      <ul class="project-navigation">
+        <li class="arrow">
+          <a href="index.html" class="navigation-arrow"
+            ><i class="fas fa-arrow-left fa-2x"></i
+          ></a>
+        </li>
+        <li>
+          <h1 class="project-title">Chinese National Bag</h1>
+        </li>
+      </ul>
+    </div>
+
+    <div class="project-image-wide">
+      <img
+        src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg"
+        alt=""
+        width="1800"
+      />
+    </div>
+
     <div class="project-wrapper">
-      <aside class="project-aside">
+      <aside class="project-aside-temp">
         <div class="project-info">
-          <h1 class="project-title">Chinese National Bag Design</h1>
-          <p>
-            <a
-              href="https://rgd.ca/hiring-designers/award-winners/rgd-student-awards-past-winners"
-              >RGD's 2023 Student Awards Honourable Mentions in packaging and
-              1st year student categories</a
-            >
-          </p>
+          <h6>Branding / Packaging / Campaign</h6>
           <p class="project-description">
             For this project I wanted to challenge the stereotype that "Made in
             China" means cheap production and poor quality. The use of seal
@@ -84,75 +98,32 @@
             utilizes museum artwork.
           </p>
         </div>
-        <ul class="project-navigation">
-          <li class="arrow">
-            <a href="liminal.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-left fa-2x"></i
-            ></a>
-          </li>
-          <li class="arrow">
-            <a href="d3adme4t.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-right fa-2x"></i
-            ></a>
-          </li>
-        </ul>
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg"
-            width="700"
-            height="700"
-            alt="A description of the image"
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Poster.jpg"
-            width="600"
-            alt=""
-          />
-        </div>
-        <div class="project-image">
           <figure>
             <img
-              src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Packaging-box-mockup.jpg"
-              width="1000"
+              src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-exhibit-poster-mockup.jpg"
               alt=""
-            />
-            <figcaption class="caption">
-              Guests can take home their own seal stamp ink from the gift shop.
-            </figcaption>
-          </figure>
-        </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-ink-pad-mockup.jpg"
               width="1000"
-              alt=""
             />
-            <figcaption class="caption">
-              Ink pads feature select artwork from the exhibit and a thick red
-              paste used traditionally for seal stamps.
-            </figcaption>
-          </figure>
-        </div>
-        <div class="project-image">
-          <figure>
-            <img
-              src="assets/images/chinese-seal-stamps-horse-painting.jpg"
-              width="900"
-              height="1127"
-              alt="A description of the image"
-            />
-            <figcaption class="caption">
-              Night-Shining White by Han Gan (ca. 750) in the Met
-            </figcaption>
           </figure>
         </div>
       </main>
     </div>
+    <div class="project-image-wide">
+      <figure>
+        <img
+          src="assets/images/caroline-zhang-design-packaging-national-bag-Dynasties-in-a-Bag-Packaging-box-mockup.jpg"
+          alt=""
+          width="1800"
+        />
+        <figcaption class="caption">
+          Visitors can take home their own seal stamp ink from the gift shop.
+        </figcaption>
+      </figure>
+    </div>
+
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
@@ -220,10 +191,6 @@
         </p>
       </li>
     </ul>
-
-    <div id="myID" class="bottomMenu hide">
-      <a href="#">Back to top</a>
-    </div>
 
     <script type="text/javascript">
       myID = document.getElementById("myID");
