--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
-  <body class="project-1">
+  <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li class="logo">
@@ -53,10 +53,31 @@
         </li>
       </ul>
     </header>
+    <div>
+      <ul class="project-navigation">
+        <li class="arrow">
+          <a href="index.html" class="navigation-arrow"
+            ><i class="fas fa-arrow-left fa-2x"></i
+          ></a>
+        </li>
+        <li>
+          <h1 class="project-title">Chinese National Bag</h1>
+        </li>
+      </ul>
+    </div>
+
+    <div class="project-image-wide">
+      <img
+        src="assets/images/caroline-zhang-foundry-bc-design-poster-series.jpg"
+        alt=""
+        width="1800"
+      />
+    </div>
+
     <div class="project-wrapper">
-      <aside class="project-aside">
+      <aside class="project-aside-temp">
         <div class="project-info">
-          <h1 class="project-title">Foundry Brand Refresh and Strategy</h1>
+          <h6>Branding / Strategy / Campaign</h6>
           <p class="project-description">
             Made with guidance from mentor
             <a href="https://www.linkedin.com/in/creativetroy/"
@@ -91,46 +112,29 @@
             </a>
           </p>
         </div>
-        <ul class="project-navigation">
-          <li class="arrow">
-            <a href="bocha.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-left fa-2x"></i
-            ></a>
-          </li>
-          <li class="arrow">
-            <a href="liminal.html" class="navigation-arrow"
-              ><i class="fas fa-arrow-right fa-2x"></i
-            ></a>
-          </li>
-        </ul>
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-foundry-bc-design-poster-series.jpg"
-            width="1900"
-            height="1267"
-            alt="Poster series of 3 posters for Foundry BC's new campaign, Foundry's Here."
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-foundry-bc-design-website-social-media.jpg"
-            width="1900"
-            height="1267"
-            alt="Laptop with Foundry BC's new website design and a phone with the Instagram profile post spread."
-          />
-        </div>
-        <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-foundry-bc-design-brochure.jpg"
-            width="1900"
-            height="1425"
-            alt="An information brochure's front and back side. It is highlighting the mental health and social services from Foundry BC."
-          />
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-foundry-bc-design-brochure.jpg"
+              alt=""
+              width="1000"
+            />
+          </figure>
         </div>
       </main>
     </div>
+    <div class="project-image-wide">
+      <figure>
+        <img
+          src="assets/images/caroline-zhang-foundry-bc-design-website-social-media.jpg"
+          alt=""
+          width="1800"
+        />
+      </figure>
+    </div>
+
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
@@ -198,10 +202,6 @@
         </p>
       </li>
     </ul>
-
-    <div id="myID" class="bottomMenu hide">
-      <a href="#">Back to top</a>
-    </div>
 
     <script type="text/javascript">
       myID = document.getElementById("myID");
