--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -86,23 +86,21 @@
             of <a href="https://creativeothers.co">Creative Others.</a>
           </p>
           <p class="project-description">
-            A full service brand strategy, refresh, and activation for
-            provincial mental health and social support service Foundry BC. This
-            project includes a brand audit, website, and social media profiles,
-            as well as a new campaign rollout.
+            A brand strategy, refresh, and activations for provincial mental
+            health and social support service Foundry BC. This project includes
+            a brand audit, website and social media profiles, as well as a new
+            campaign rollout.
           </p>
           <p class="project-description">
-            When developing the campaign, I took into consideration the existing
-            brand assets and how their content production works on a low budget.
-            The campaign should be evergreen and reiteratable over and over
-            again. The existing animal spot illustrations have been repurposed
-            in the “Foundry’s Here” campaign to highlight how mental health
-            challenges are a natural process that Foundry can help with. It
-            represents many aspects of the brand: the locality, community, and
-            support when you want it. Additionally, the circular shapes found in
-            other parts of the brand are utilized as the main graphic shape
-            which creates a more interesting composition with the static spot
-            illustrations.
+            When developing the campaign, I took into consideration the great
+            existing brand assets and how their content production works on a
+            low budget. The campaign should be evergreen and reiteratable over
+            and over again. The existing animal spot illustrations have been
+            repurposed in the “Foundry’s Here” campaign to highlight how mental
+            health challenges are something natural that Foundry can help with.
+            Additionally, the circular shapes found in other parts of the brand
+            are utilized as the main graphic shape to create interesting and
+            flexible compositions alongside the static spot illustrations.
           </p>
           <p class="project-description">
             Interested in seeing more?<br />
