--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="home-blurb-container">
       <div class="home-blurb">
         <h5>
-          I’m a Vancouver based designer with a focus on research and problem
+          I’m a Vancouver-based designer with a focus on research and problem
           solving. I like dogs, video games, and music.
         </h5>
       </div>
