changed home image and foundry title

--- a/foundry-refresh.html
+++ b/foundry-refresh.html
@@ -61,7 +61,7 @@
           ></a>
         </li>
         <li>
-          <h1 class="project-title">Chinese National Bag</h1>
+          <h1 class="project-title">Foundry Brand Refresh</h1>
         </li>
       </ul>
     </div>
