--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -68,7 +68,7 @@
 
     <div class="project-image-wide">
       <img
-        src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg"
+        src="assets/images/caroline-zhang-chinese-national-bag-design.gif"
         alt=""
         width="1800"
       />
